src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Demo_object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo object</label>
        <referenceTo>Demo_object__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MyExtID__c</fullName>
        <externalId>true</externalId>
        <label>MyExtID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interested_technologies__c</fullName>
        <label>interested technologies</label>
        <picklist>
            <picklistValues>
                <fullName>Tech1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Phone_Number_IND</fullName>
        <active>false</active>
        <description>validates the ph no is in India format</description>
        <errorConditionFormula>NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Not a valid phone number</errorMessage>
    </validationRules>
</CustomObject>